Fix textarea maxlength value and alignment

--- a/src/styles/helpers/_spacing-margin.scss
+++ b/src/styles/helpers/_spacing-margin.scss
@@ -41,6 +41,8 @@
   @for $i from $scale-begin through $scale-end {
     &-#{$i} { @include step(margin-top, $i); }
   }
+
+  &-auto { margin-top: auto; }
 }
 
 // Margins - right only
@@ -48,6 +50,8 @@
   @for $i from $scale-begin through $scale-end {
     &-#{$i} { @include step(margin-right, $i); }
   }
+
+  &-auto { margin-right: auto; }
 }
 
 // Margins - bottom only
@@ -55,6 +59,8 @@
   @for $i from $scale-begin through $scale-end {
     &-#{$i} { @include step(margin-bottom, $i); }
   }
+
+  &-auto { margin-bottom: auto; }
 }
 
 // Margins - left only
@@ -62,4 +68,6 @@
   @for $i from $scale-begin through $scale-end {
     &-#{$i} { @include step(margin-left, $i); }
   }
+
+  &-auto { margin-left: auto; }
 }
